--- a/Activate.qmd
+++ b/Activate.qmd
@@ -95,6 +95,12 @@ Nos reunimos algunos martes en los siguientes horarios:
 ## Únete al canal: 
 
  - _#test-camp_
+   
+### Otras referencias:
+
+- [Bootcamp Book](https://coda.io/d/Bootcamp-Book_dUrlCH0OK3j/Test-Camp_sujwe#_luLVH)
+- [Baseline Docs](./baseline_docs.md)
+- Esta documentación: <br> [https://github.com/Laboratoria/test-camp-docs](https://github.com/Laboratoria/test-camp-docs)
 
 # ¡Gracias! <br> Thank you! <br> Obrigado!
 
